gcc/testsuite/g++.old-deja/g++.ns/undef1.C
// { dg-do assemble  }
namespace A{
}

struct Y: A::S<int>{};     //{ dg-error "" } no such type
